--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
 
     </section>
 
-    <section>
-        Club Ethos
+    <section id="club-ethos">
+        <h1>Why Love Running With Us?</h1>
+        <div id="left-about">Left</div>
+        <div id="right-about">Right</div>
+        <div id="center-about">Center</div>
     </section>
 
     <section>
